add markdown comments

--- a/student.ipynb
+++ b/student.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "sqft_lot15           5650        7639        8062        5000        7503"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -361,12 +361,19 @@
    ],
    "source": [
     "sns.heatmap(house_data.corr(), center=0)\n",
-    "house_data.corr()['price'].sort_values()"
+    "house_data.corr()['price'].sort_values() #price is our target variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The square foot of living has the greatest value of correlation so we will start by running a simple linear regression with squarefoot of living."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1c2383d550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x109181518>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -409,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +447,7 @@
        "  <th>Date:</th>             <td>Mon, 15 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>10:13:53</td>     <th>  Log-Likelihood:    </th> <td>-3.0006e+05</td>\n",
+       "  <th>Time:</th>                 <td>11:04:07</td>     <th>  Log-Likelihood:    </th> <td>-3.0006e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 21597</td>      <th>  AIC:               </th>  <td>6.001e+05</td> \n",
@@ -490,7 +497,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.493\n",
        "Method:                 Least Squares   F-statistic:                 2.097e+04\n",
        "Date:                Mon, 15 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        10:13:53   Log-Likelihood:            -3.0006e+05\n",
+       "Time:                        11:04:07   Log-Likelihood:            -3.0006e+05\n",
        "No. Observations:               21597   AIC:                         6.001e+05\n",
        "Df Residuals:                   21595   BIC:                         6.001e+05\n",
        "Df Model:                           1                                         \n",
@@ -514,7 +521,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,6 +552,13 @@
     "fig = plt.figure(figsize=(15,8))\n",
     "fig = sm.graphics.plot_regress_exog(model, 'x', fig=fig)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the second plot in the first row, the residuals are plotted in a cone shape which is an indicator of heteroscedasticity. When making linear regression models we are assuming homoscedasticity so we may want to transform sqft_living."
    ]
   },
   {
@@ -627,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#_ = pd.plotting.scatter_matrix(house_data, figsize=(18, 18))"
+    "# squarefoot living is positively skewed and has no null (0) values that we want to fix"
    ]
   },
   {
@@ -683,12 +697,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regression is not a great fit once the sqft_living increases. The outliers are affecting the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transform sqft_living\n",
+    "# transform sqft_living to see if we can get a better model\n",
     "log_sqft_living = np.log(house_data['sqft_living'])"
    ]
   },
@@ -862,7 +883,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The logarithmic transformation of squarefoot living does not appear to be as linear as the untransformed data. We thought the log would reduce the effect of outliers, but they may have strengthened them. We will stick with the untransformed for now."
+    "The logarithmic transformation of squarefoot living does not appear to be as linear as the untransformed data (shown again below). We thought the log would reduce the effect of outliers, but they may have strengthened them. We will stick with the untransformed for now."
    ]
   },
   {
@@ -915,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
