--- a/wip.ipynb
+++ b/wip.ipynb
@@ -261,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x106c3d160>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x105dda320>"
       ]
      },
      "execution_count": 10,
@@ -342,7 +342,7 @@
        "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>12:50:31</td>     <th>  Log-Likelihood:    </th> <td>-2.9287e+05</td>\n",
+       "  <th>Time:</th>                 <td>14:22:50</td>     <th>  Log-Likelihood:    </th> <td>-2.9287e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 21082</td>      <th>  AIC:               </th>  <td>5.857e+05</td> \n",
@@ -392,7 +392,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.493\n",
        "Method:                 Least Squares   F-statistic:                 2.048e+04\n",
        "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        12:50:31   Log-Likelihood:            -2.9287e+05\n",
+       "Time:                        14:22:50   Log-Likelihood:            -2.9287e+05\n",
        "No. Observations:               21082   AIC:                         5.857e+05\n",
        "Df Residuals:                   21080   BIC:                         5.858e+05\n",
        "Df Model:                           1                                         \n",
@@ -688,7 +688,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1c1d6b8d68>"
+       "<matplotlib.collections.PathCollection at 0x1c1c9e8da0>"
       ]
      },
      "execution_count": 20,
@@ -713,43 +713,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20575 entries, 0 to 21596\n",
-      "Data columns (total 16 columns):\n",
-      "const            20575 non-null float64\n",
-      "id               20575 non-null int64\n",
-      "date             20575 non-null datetime64[ns]\n",
-      "bedrooms         20575 non-null int64\n",
-      "bathrooms        20575 non-null float64\n",
-      "sqft_living      20575 non-null int64\n",
-      "sqft_lot         20575 non-null int64\n",
-      "floors           20575 non-null float64\n",
-      "waterfront       18293 non-null float64\n",
-      "view             20575 non-null float64\n",
-      "condition        20575 non-null int64\n",
-      "sqft_basement    20575 non-null float64\n",
-      "yr_built         20575 non-null int64\n",
-      "lat              20575 non-null float64\n",
-      "long             20575 non-null float64\n",
-      "sqft_lot15       20575 non-null int64\n",
-      "dtypes: datetime64[ns](1), float64(8), int64(7)\n",
-      "memory usage: 2.7 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictors_int.info()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -758,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +754,7 @@
        "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>12:54:01</td>     <th>  Log-Likelihood:    </th> <td>-2.7755e+05</td>\n",
+       "  <th>Time:</th>                 <td>14:22:52</td>     <th>  Log-Likelihood:    </th> <td>-2.7755e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 20575</td>      <th>  AIC:               </th>  <td>5.551e+05</td> \n",
@@ -853,7 +816,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.505\n",
        "Method:                 Least Squares   F-statistic:                     4197.\n",
        "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        12:54:01   Log-Likelihood:            -2.7755e+05\n",
+       "Time:                        14:22:52   Log-Likelihood:            -2.7755e+05\n",
        "No. Observations:               20575   AIC:                         5.551e+05\n",
        "Df Residuals:                   20569   BIC:                         5.552e+05\n",
        "Df Model:                           5                                         \n",
@@ -881,7 +844,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,13 +873,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# m_linreg stands for the linear regression completed for multiple linear regression as opposed to simple linear regression\n",
-    "m_linreg"
+    "# m_linreg = multiple linear regression (model)\n",
+    "m_linreg = LinearRegression()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_linreg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_hat_train = m_linreg.predict(X_train)\n",
+    "y_hat_test = m_linreg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "174342.6984325233 175484.06262607517\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "train_rmse = np.sqrt(mean_squared_error(y_train, y_hat_train))\n",
+    "test_rmse = np.sqrt(mean_squared_error(y_test,y_hat_test))\n",
+    "\n",
+    "print(train_rmse, test_rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "#rmse_scorer = make_scorer(rmse, greater_is_better=False) #TODO(Kayli) figure out rmse scorer\n",
+    "cv_5_results = cross_val_score(m_linreg, predictors, house_data['price'], cv=5, scoring='neg_mean_squared_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#np.sqrt(cv_5_results)\n",
+    "type(cv_5_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/flatironschool/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([       nan, 1.41421356, 1.73205081, 2.        ])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array = np.array([-1, 2, 3, 4])\n",
+    "np.sqrt(test_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
