--- a/student.ipynb
+++ b/student.ipynb
@@ -7,8 +7,8 @@
     "## Final Project Submission\n",
     "\n",
     "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
+    "* Student name: Kayli Leung and Alec Morgan\n",
+    "* Student pace: full time\n",
     "* Scheduled project review date/time: \n",
     "* Instructor name: \n",
     "* Blog post URL:\n"
@@ -1259,7 +1259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
