add explaination of coefficients

--- a/student.ipynb
+++ b/student.ipynb
@@ -2318,6 +2318,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With everything equal to zero, the price of a house is around 7.8 x 10^31 dollars. Each increase by 1 in latitude increase price by 2.53 dollars. Having a waterfront property increases value by 1.35 dollars. Each increase by in longitude increases value by 2.36 dollars. It is important to note that King County has a negative longitude this feature actually is a decrease in value when the longitude decreases."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
