--- a/student.ipynb
+++ b/student.ipynb
@@ -10,7 +10,7 @@
     "* Students' pace: Full time\n",
     "* Scheduled project review date/time: 04/19/2019 12:30 PM \n",
     "* Instructors' names: Miles Erickson, Greg Damico\n",
-    "* Blog post URL: TODO(Alec): Write blog."
+    "* Blog post URL: https://medium.com/@alecnmorgan/adventures-in-predictor-selection-2d0333aa0c05"
    ]
   },
   {
